finished transation (thank you page and products page)

--- a/dziekuje.html
+++ b/dziekuje.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
-    <title data-translate="title" >TECHGAFIL - Dysze chłodzące NNPB, PB i półfabrykaty rurek</title>
+    <title id="title" >TECHGAFIL - Dysze chłodzące NNPB, PB i półfabrykaty rurek</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="main__text--thank-you wrapper">
-            <p data-translate="thank-you__thanks">Dziękujemy, wiadomość została wysłana!</p>
+            <p data-translate="thanku__thanks" class="to-translate">Dziękujemy, wiadomość została wysłana!</p>
         </div>
     </section>
     <footer>
@@ -86,6 +86,7 @@
 </div>
 
     <script src="dist/js/script.min.js"></script>
+    <script src="dist/js/translate_dziekuje.min.js"></script>
 </body>
 
 </html>
