404 page added + some bugfixes

--- a/404.html
+++ b/404.html
@@ -63,7 +63,8 @@
         </div>
 
         <div class="main__text--thank-you">
-            <p data-translate="thanku__thanks" class="to-translate">Dziękujemy, wiadomość została wysłana!</p>
+            <p data-translate="404__ups" class="to-translate">Ups! Nie ma takiej strony. Strona została najprawdopodobniej przeniesiona lub usunięta.</p>
+            <a href="https://techgafil.pl" data-translate="404__btn" class="to-translate button">Wracam na stronę główną</a>
         </div>
     </section>
     <footer>
