--- a/kontakt.html
+++ b/kontakt.html
@@ -88,7 +88,7 @@
                     <input type="text" name="_honey" class="honey">
                     <!--Disable Captcha-->
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="kontakt-success.html">
+                    <input type="hidden" name="_next" value="https://techgafil.pl/dziekuje.html">
 
                     <label data-translate="contact__form-name" class="to-translate" for="name">Imię i nazwisko</label>
                     <input id="contact__p-name" type="text" id="name" name="name" placeholder="Twoje imię i nazwisko...">
